--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ function FindOnPage(inputId) {
 
 
 <div class="n3">
-	<div id="fb-root"></div>
+	<div id="fb-root" class="n4"></div>
 <input type="text" id="text-to-find" value=""> 
 <input type="button" onclick="javascript: FindOnPage('text-to-find'); return false;" value="Пошук"/>
 </div>
